# Transformer-based-Sequential-Product-Recommender

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: evaluate.sh  run_api.sh  run_data_pipeline.sh  train_baselines.sh  train_transformer.sh
sql/: schema.sql
src/api/: app.py
src/data/: generate_synthetic.py  load_sqlite.py  prepare_sequences.py  split.py
src/evaluation/: eda.py  evaluate.py  metrics.py
src/features/: item_features.py
src/models/: als.py  bert4rec.py  catboost_baseline.py  item_knn.py  popularity.py  transformer.py
src/training/: train_baselines.py  train_transformer.py
src/utils/: config.py  logging.py  seed.py
tests/: test_metrics.py  test_sequence_preparation.py
